<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/davy_grey"
    android:padding="@dimen/padding_16"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/txt_countryname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/demo_name" />

    <TextView
        android:id="@+id/txt_confirmed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/color_confirmed"
        android:textStyle="bold"
        android:textSize="@dimen/text_14"
        app:layout_constraintStart_toStartOf="@+id/txt_countryname"
        app:layout_constraintTop_toBottomOf="@+id/txt_countryname"
        tools:text="@string/demo_confirmed"/>

    <TextView
        android:id="@+id/txt_recovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@color/color_recovered"
        android:textSize="@dimen/text_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirmed"
        tools:text="@string/demo_recovered" />

    <TextView
        android:id="@+id/txt_death"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textColor="@color/color_death"
        android:textSize="@dimen/text_14"
        app:layout_constraintStart_toEndOf="@+id/txt_recovered"
        app:layout_constraintTop_toBottomOf="@+id/txt_confirmed"
        tools:text="@string/demo_death" />

    <TextView
        android:id="@+id/txt_latestupdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/cool_grey"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recovered"
        tools:text="@string/demo_lastupdated" />


</androidx.constraintlayout.widget.ConstraintLayout>